--- a/lang/bn.json
+++ b/lang/bn.json
@@ -1176,8 +1176,8 @@
   "The provided two factor recovery code was invalid.": "প্রদত্ত দুই ফ্যাক্টর পুনরুদ্ধার কোড অবৈধ ছিল।",
   "There are no active addresses yet.": "এখনও কোন সক্রিয় ঠিকানা নেই.",
   "There are no calls logged yet.": "এখনও কোন কল লগ নেই.",
-  "There are no contact information types yet.": "এখনও কোনও যোগাযোগের তথ্যের ধরণ নেই।",
   "There are no contact informations yet.": "এখনও কোন যোগাযোগের তথ্য নেই.",
+  "There are no contact information types yet.": "এখনও কোনও যোগাযোগের তথ্যের ধরণ নেই।",
   "There are no documents yet.": "এখনও কোন নথি নেই.",
   "There are no events on that day, future or past.": "সেই দিন, ভবিষ্যত বা অতীতের কোন ঘটনা নেই।",
   "There are no files yet.": "এখনও কোন ফাইল নেই.",
@@ -1233,7 +1233,7 @@
   "The type has been created": "টাইপ তৈরি হয়েছে",
   "The type has been deleted": "টাইপ মুছে ফেলা হয়েছে",
   "The type has been updated": "টাইপ আপডেট করা হয়েছে",
-  "The type of contact information. Don’t change it unless you know what you are doing.": "যোগাযোগের তথ্যের ধরণ। আপনি কী করছেন তা না জানলে এটিকে পরিবর্তন করবেন না।",
+  "The type of contact information. Don’t change this unless you know what you are doing.": "যোগাযোগের তথ্যের ধরণ। আপনি কী করছেন তা না জানলে এটি পরিবর্তন করবেন না।",
   "The user has been added": "ব্যবহারকারী যোগ করা হয়েছে",
   "The user has been deleted": "ব্যবহারকারী মুছে ফেলা হয়েছে",
   "The user has been removed": "ব্যবহারকারীকে সরানো হয়েছে",
@@ -1470,6 +1470,9 @@
   "🏠 Secondary residence": "🏠 মাধ্যমিক বাসস্থান",
   "🏡 Home": "🏡 বাড়ি",
   "🏢 Work": "🏢 কাজ",
+  "📟 Pager": "📟 পেজার",
+  "📠 Fax": "📠 ফ্যাক্স",
+  "📱 Mobile": "📱 মোবাইল",
   "🔔 Reminder: :label for :contactName": "🔔 অনুস্মারক: :contactName এর জন্য :label",
   "😀 Good": "😀 ভালো",
   "😁 Positive": "😁 ইতিবাচক",
@@ -1478,5 +1481,6 @@
   "😡 Negative": "😡 নেতিবাচক",
   "😩 Awful": "😩 জঘন্য",
   "😶‍🌫️ Neutral": "😶‍🌫️ নিরপেক্ষ",
-  "🥳 Awesome": "🥳 অসাধারণ"
+  "🥳 Awesome": "🥳 অসাধারণ",
+  "🧑🏼 Personal": "🧑🏼 ব্যক্তিগত"
 }
