--- a/lang/el.json
+++ b/lang/el.json
@@ -1176,8 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Ο παρεχόμενος κωδικός ανάκτησης δύο παραγόντων δεν ήταν έγκυρος.",
   "There are no active addresses yet.": "Δεν υπάρχουν ακόμα ενεργές διευθύνσεις.",
   "There are no calls logged yet.": "Δεν έχουν καταγραφεί ακόμη κλήσεις.",
-  "There are no contact information types yet.": "Δεν υπάρχουν ακόμη τύποι πληροφοριών επικοινωνίας.",
   "There are no contact informations yet.": "Δεν υπάρχουν ακόμη στοιχεία επικοινωνίας.",
+  "There are no contact information types yet.": "Δεν υπάρχουν ακόμη τύποι πληροφοριών επικοινωνίας.",
   "There are no documents yet.": "Δεν υπάρχουν ακόμη έγγραφα.",
   "There are no events on that day, future or past.": "Δεν υπάρχουν γεγονότα εκείνη την ημέρα, μέλλον ή παρελθόν.",
   "There are no files yet.": "Δεν υπάρχουν ακόμα αρχεία.",
@@ -1233,7 +1233,7 @@
   "The type has been created": "Ο τύπος έχει δημιουργηθεί",
   "The type has been deleted": "Ο τύπος έχει διαγραφεί",
   "The type has been updated": "Ο τύπος έχει ενημερωθεί",
-  "The type of contact information. Don’t change it unless you know what you are doing.": "Ο τύπος των στοιχείων επικοινωνίας. Μην το αλλάζετε εκτός αν ξέρετε τι κάνετε.",
+  "The type of contact information. Don’t change this unless you know what you are doing.": "Ο τύπος των στοιχείων επικοινωνίας. Μην το αλλάζετε εκτός αν ξέρετε τι κάνετε.",
   "The user has been added": "Ο χρήστης έχει προστεθεί",
   "The user has been deleted": "Ο χρήστης έχει διαγραφεί",
   "The user has been removed": "Ο χρήστης έχει αφαιρεθεί",
@@ -1470,6 +1470,9 @@
   "🏠 Secondary residence": "🏠 Δευτερεύουσα κατοικία",
   "🏡 Home": "🏡 Σπίτι",
   "🏢 Work": "🏢 Εργασία",
+  "📟 Pager": "📟 Pager",
+  "📠 Fax": "📠 Φαξ",
+  "📱 Mobile": "📱 Κινητό",
   "🔔 Reminder: :label for :contactName": "🔔 Υπενθύμιση: :label για :contactName",
   "😀 Good": "😀 Καλό",
   "😁 Positive": "😁 Θετικό",
@@ -1478,5 +1481,6 @@
   "😡 Negative": "😡 Αρνητικό",
   "😩 Awful": "😩 Απαίσιο",
   "😶‍🌫️ Neutral": "😶‍🌫️ Ουδέτερο",
-  "🥳 Awesome": "🥳 Υπέροχο"
+  "🥳 Awesome": "🥳 Υπέροχο",
+  "🧑🏼 Personal": "🧑🏼 Προσωπικά"
 }
