--- a/lang/hi.json
+++ b/lang/hi.json
@@ -1176,8 +1176,8 @@
   "The provided two factor recovery code was invalid.": "प्रदान किया गया दो कारक पुनर्प्राप्ति कोड अमान्य था।",
   "There are no active addresses yet.": "अभी तक कोई सक्रिय पता नहीं है.",
   "There are no calls logged yet.": "अभी तक कोई कॉल लॉग नहीं हुई है.",
-  "There are no contact information types yet.": "अभी तक कोई संपर्क जानकारी प्रकार नहीं हैं।",
   "There are no contact informations yet.": "अभी तक कोई संपर्क जानकारी नहीं है.",
+  "There are no contact information types yet.": "अभी तक कोई संपर्क जानकारी प्रकार नहीं हैं।",
   "There are no documents yet.": "अभी तक कोई दस्तावेज़ नहीं हैं.",
   "There are no events on that day, future or past.": "उस दिन, भविष्य या अतीत की कोई घटना नहीं होती।",
   "There are no files yet.": "अभी तक कोई फ़ाइल नहीं है.",
@@ -1233,7 +1233,7 @@
   "The type has been created": "प्रकार बनाया गया है",
   "The type has been deleted": "प्रकार हटा दिया गया है",
   "The type has been updated": "प्रकार अद्यतन कर दिया गया है",
-  "The type of contact information. Don’t change it unless you know what you are doing.": "संपर्क जानकारी का प्रकार। जब तक आप नहीं जानते कि आप क्या कर रहे हैं, तब तक इसे न बदलें।",
+  "The type of contact information. Don’t change this unless you know what you are doing.": "संपर्क जानकारी का प्रकार। जब तक आप नहीं जानते कि आप क्या कर रहे हैं, इसे न बदलें।",
   "The user has been added": "उपयोगकर्ता को जोड़ दिया गया है",
   "The user has been deleted": "उपयोगकर्ता को हटा दिया गया है",
   "The user has been removed": "उपयोगकर्ता को हटा दिया गया है",
@@ -1470,6 +1470,9 @@
   "🏠 Secondary residence": "🏠द्वितीय निवास",
   "🏡 Home": "🏡घर",
   "🏢 Work": "🏢 काम",
+  "📟 Pager": "📟 पेजर",
+  "📠 Fax": "📠 फैक्स",
+  "📱 Mobile": "📱 मोबाइल",
   "🔔 Reminder: :label for :contactName": "🔔 अनुस्मारक: :label के लिए :contactName",
   "😀 Good": "😀 अच्छा",
   "😁 Positive": "😁सकारात्मक",
@@ -1478,5 +1481,6 @@
   "😡 Negative": "😡नकारात्मक",
   "😩 Awful": "😩 भयानक",
   "😶‍🌫️ Neutral": "😶‍🌫️ तटस्थ",
-  "🥳 Awesome": "🥳 बहुत बढ़िया"
+  "🥳 Awesome": "🥳 बहुत बढ़िया",
+  "🧑🏼 Personal": "🧑🏼 व्यक्तिगत"
 }
