--- a/lang/ml.json
+++ b/lang/ml.json
@@ -1176,8 +1176,8 @@
   "The provided two factor recovery code was invalid.": "നൽകിയിരിക്കുന്ന രണ്ട് ഫാക്ടർ വീണ്ടെടുക്കൽ കോഡ് അസാധുവാണ്.",
   "There are no active addresses yet.": "ഇതുവരെ സജീവമായ വിലാസങ്ങളൊന്നുമില്ല.",
   "There are no calls logged yet.": "ഇതുവരെ കോളുകളൊന്നും ലോഗ് ചെയ്തിട്ടില്ല.",
-  "There are no contact information types yet.": "കോൺടാക്റ്റ് വിവര തരങ്ങളൊന്നുമില്ല.",
   "There are no contact informations yet.": "ഇതുവരെ ബന്ധപ്പെടാനുള്ള വിവരങ്ങളൊന്നുമില്ല.",
+  "There are no contact information types yet.": "കോൺടാക്റ്റ് വിവര തരങ്ങളൊന്നുമില്ല.",
   "There are no documents yet.": "ഇതുവരെ രേഖകളൊന്നുമില്ല.",
   "There are no events on that day, future or past.": "ആ ദിവസമോ ഭാവിയിലോ ഭൂതകാലത്തിലോ സംഭവങ്ങളൊന്നുമില്ല.",
   "There are no files yet.": "ഇതുവരെ ഫയലുകളൊന്നുമില്ല.",
@@ -1233,7 +1233,7 @@
   "The type has been created": "തരം സൃഷ്ടിച്ചു",
   "The type has been deleted": "തരം ഇല്ലാതാക്കി",
   "The type has been updated": "തരം അപ്ഡേറ്റ് ചെയ്തു",
-  "The type of contact information. Don’t change it unless you know what you are doing.": "കോൺടാക്റ്റ് വിവരങ്ങളുടെ തരം. നിങ്ങൾ എന്താണ് ചെയ്യുന്നതെന്ന് നിങ്ങൾക്കറിയില്ലെങ്കിൽ അത് മാറ്റരുത്.",
+  "The type of contact information. Don’t change this unless you know what you are doing.": "കോൺടാക്റ്റ് വിവരങ്ങളുടെ തരം. നിങ്ങൾ എന്താണ് ചെയ്യുന്നതെന്ന് നിങ്ങൾക്കറിയില്ലെങ്കിൽ ഇത് മാറ്റരുത്.",
   "The user has been added": "ഉപയോക്താവിനെ ചേർത്തു",
   "The user has been deleted": "ഉപയോക്താവിനെ ഇല്ലാതാക്കി",
   "The user has been removed": "ഉപയോക്താവിനെ നീക്കം ചെയ്‌തു",
@@ -1470,6 +1470,9 @@
   "🏠 Secondary residence": "🏠 സെക്കൻഡറി വസതി",
   "🏡 Home": "🏡 വീട്",
   "🏢 Work": "🏢 ജോലി",
+  "📟 Pager": "📟 പേജ്",
+  "📠 Fax": "Fax",
+  "📱 Mobile": "📱 മൊബൈൽ",
   "🔔 Reminder: :label for :contactName": "🔔 ഓർമ്മപ്പെടുത്തൽ: :contactName എന്നതിനുള്ള :label",
   "😀 Good": "😀 കൊള്ളാം",
   "😁 Positive": "😁 പോസിറ്റീവ്",
@@ -1478,5 +1481,6 @@
   "😡 Negative": "😡 നെഗറ്റീവ്",
   "😩 Awful": "😩 ഭയങ്കരം",
   "😶‍🌫️ Neutral": "😶‍🌫️ ന്യൂട്രൽ",
-  "🥳 Awesome": "🥳 ഗംഭീരം"
+  "🥳 Awesome": "🥳 ഗംഭീരം",
+  "🧑🏼 Personal": "🧑🏼 വ്യക്തിഗത"
 }
