--- a/lang/pa.json
+++ b/lang/pa.json
@@ -1176,8 +1176,8 @@
   "The provided two factor recovery code was invalid.": "ਪ੍ਰਦਾਨ ਕੀਤਾ ਦੋ ਫੈਕਟਰ ਰਿਕਵਰੀ ਕੋਡ ਅਵੈਧ ਸੀ।",
   "There are no active addresses yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਕਿਰਿਆਸ਼ੀਲ ਪਤੇ ਨਹੀਂ ਹਨ।",
   "There are no calls logged yet.": "ਹਾਲੇ ਤੱਕ ਕੋਈ ਕਾਲ ਲੌਗ ਨਹੀਂ ਕੀਤੀ ਗਈ ਹੈ।",
-  "There are no contact information types yet.": "ਹਾਲੇ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮਾਂ ਨਹੀਂ ਹਨ.",
   "There are no contact informations yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨਹੀਂ ਹੈ।",
+  "There are no contact information types yet.": "ਹਾਲੇ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮਾਂ ਨਹੀਂ ਹਨ.",
   "There are no documents yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਦਸਤਾਵੇਜ਼ ਨਹੀਂ ਹਨ।",
   "There are no events on that day, future or past.": "ਉਸ ਦਿਨ, ਭਵਿੱਖ ਜਾਂ ਅਤੀਤ ਦੀਆਂ ਕੋਈ ਘਟਨਾਵਾਂ ਨਹੀਂ ਹਨ।",
   "There are no files yet.": "ਹਾਲੇ ਤੱਕ ਕੋਈ ਫ਼ਾਈਲਾਂ ਨਹੀਂ ਹਨ।",
@@ -1233,7 +1233,7 @@
   "The type has been created": "ਕਿਸਮ ਬਣਾਈ ਗਈ ਹੈ",
   "The type has been deleted": "ਕਿਸਮ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
   "The type has been updated": "ਕਿਸਮ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
-  "The type of contact information. Don’t change it unless you know what you are doing.": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ. ਇਸ ਨੂੰ ਨਾ ਬਦਲੋ ਜਦੋਂ ਤਕ ਤੁਹਾਨੂੰ ਪਤਾ ਨਹੀਂ ਹੁੰਦਾ ਕਿ ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ.",
+  "The type of contact information. Don’t change this unless you know what you are doing.": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ. ਇਸ ਨੂੰ ਨਾ ਬਦਲੋ ਜਦੋਂ ਤਕ ਤੁਹਾਨੂੰ ਪਤਾ ਨਹੀਂ ਹੁੰਦਾ ਕਿ ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ.",
   "The user has been added": "ਉਪਭੋਗਤਾ ਨੂੰ ਜੋੜਿਆ ਗਿਆ ਹੈ",
   "The user has been deleted": "ਉਪਭੋਗਤਾ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The user has been removed": "ਉਪਭੋਗਤਾ ਨੂੰ ਹਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
@@ -1470,6 +1470,9 @@
   "🏠 Secondary residence": "🏠 ਸੈਕੰਡਰੀ ਨਿਵਾਸ",
   "🏡 Home": "🏡 ਘਰ",
   "🏢 Work": "🏢 ਕੰਮ",
+  "📟 Pager": "📟 ਪੇਜ਼ਰ",
+  "📠 Fax": "📠 ਫੈਕਸ",
+  "📱 Mobile": "📱 ਮੋਬਾਈਲ",
   "🔔 Reminder: :label for :contactName": "🔔 ਰੀਮਾਈਂਡਰ: :contactName ਲਈ :label",
   "😀 Good": "😀 ਚੰਗਾ",
   "😁 Positive": "😁 ਸਕਾਰਾਤਮਕ",
@@ -1478,5 +1481,6 @@
   "😡 Negative": "😡 ਨਕਾਰਾਤਮਕ",
   "😩 Awful": "😩 ਭਿਆਨਕ",
   "😶‍🌫️ Neutral": "😶‍🌫️ ਨਿਰਪੱਖ",
-  "🥳 Awesome": "🥳 ਸ਼ਾਨਦਾਰ"
+  "🥳 Awesome": "🥳 ਸ਼ਾਨਦਾਰ",
+  "🧑🏼 Personal": "🧑🏼 ਨਿੱਜੀ"
 }
