--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1176,8 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Предоставленный двухфакторный код восстановления недействителен.",
   "There are no active addresses yet.": "Активных адресов пока нет.",
   "There are no calls logged yet.": "Пока еще не зарегистрировано ни одного звонка.",
-  "There are no contact information types yet.": "Там еще нет контактных типов информации.",
   "There are no contact informations yet.": "Контактной информации пока нет.",
+  "There are no contact information types yet.": "Там еще нет контактных типов информации.",
   "There are no documents yet.": "Документов пока нет.",
   "There are no events on that day, future or past.": "В этот день нет никаких событий ни в будущем, ни в прошлом.",
   "There are no files yet.": "Файлов пока нет.",
@@ -1233,7 +1233,7 @@
   "The type has been created": "Тип создан.",
   "The type has been deleted": "Тип был удален",
   "The type has been updated": "Тип обновлен.",
-  "The type of contact information. Don’t change it unless you know what you are doing.": "Тип контактной информации. Не меняйте это, если вы не знаете, что делаете.",
+  "The type of contact information. Don’t change this unless you know what you are doing.": "Тип контактной информации. Не меняйте это, если вы не знаете, что делаете.",
   "The user has been added": "Пользователь добавлен",
   "The user has been deleted": "Пользователь был удален",
   "The user has been removed": "Пользователь удален",
@@ -1470,6 +1470,9 @@
   "🏠 Secondary residence": "🏠 Второе место жительства",
   "🏡 Home": "🏡 Дом",
   "🏢 Work": "🏢 Работа",
+  "📟 Pager": "📟 Пейджер",
+  "📠 Fax": "📠 Факс",
+  "📱 Mobile": "📱 Мобильный",
   "🔔 Reminder: :label for :contactName": "🔔 Напоминание: :label для :contactName",
   "😀 Good": "😀 Хорошо",
   "😁 Positive": "😁 Позитив",
@@ -1478,5 +1481,6 @@
   "😡 Negative": "😡 Отрицательный",
   "😩 Awful": "😩 Ужасно",
   "😶‍🌫️ Neutral": "😶‍🌫️ Нейтрально",
-  "🥳 Awesome": "🥳 Круто"
+  "🥳 Awesome": "🥳 Круто",
+  "🧑🏼 Personal": "🧑🏼 Личный"
 }
