--- a/lang/ur.json
+++ b/lang/ur.json
@@ -1176,8 +1176,8 @@
   "The provided two factor recovery code was invalid.": "فراہم کردہ دو فیکٹر ریکوری کوڈ غلط تھا۔",
   "There are no active addresses yet.": "ابھی تک کوئی فعال پتے نہیں ہیں۔",
   "There are no calls logged yet.": "ابھی تک کوئی کال لاگ ان نہیں ہے۔",
-  "There are no contact information types yet.": "ابھی تک رابطہ کی معلومات کی کوئی اقسام نہیں ہیں۔",
   "There are no contact informations yet.": "ابھی تک کوئی رابطہ کی معلومات نہیں ہیں۔",
+  "There are no contact information types yet.": "ابھی تک رابطہ کی معلومات کی کوئی اقسام نہیں ہیں۔",
   "There are no documents yet.": "ابھی تک کوئی دستاویزات نہیں ہیں۔",
   "There are no events on that day, future or past.": "اس دن، مستقبل یا ماضی میں کوئی واقعات نہیں ہیں۔",
   "There are no files yet.": "ابھی تک کوئی فائلیں نہیں ہیں۔",
@@ -1233,7 +1233,7 @@
   "The type has been created": "قسم بنائی گئی ہے۔",
   "The type has been deleted": "قسم حذف کر دی گئی ہے۔",
   "The type has been updated": "قسم کو اپ ڈیٹ کر دیا گیا ہے۔",
-  "The type of contact information. Don’t change it unless you know what you are doing.": "رابطے کی معلومات کی قسم۔ اسے تبدیل نہ کریں جب تک کہ آپ کو معلوم نہ ہو کہ آپ کیا کر رہے ہیں۔",
+  "The type of contact information. Don’t change this unless you know what you are doing.": "رابطے کی معلومات کی قسم۔ اس کو تبدیل نہ کریں جب تک کہ آپ کو معلوم نہ ہو کہ آپ کیا کر رہے ہیں۔",
   "The user has been added": "صارف کو شامل کیا گیا ہے۔",
   "The user has been deleted": "صارف کو حذف کر دیا گیا ہے۔",
   "The user has been removed": "صارف کو ہٹا دیا گیا ہے۔",
@@ -1470,6 +1470,9 @@
   "🏠 Secondary residence": "🏠 ثانوی رہائش گاہ",
   "🏡 Home": "🏡 گھر",
   "🏢 Work": "🏢 کام",
+  "📟 Pager": "📟 پیجر",
+  "📠 Fax": "📠 فیکس",
+  "📱 Mobile": "📱 موبائل",
   "🔔 Reminder: :label for :contactName": "🔔 یاد دہانی: :contactName کے لیے :label",
   "😀 Good": "😀 اچھا",
   "😁 Positive": "😁 مثبت",
@@ -1478,5 +1481,6 @@
   "😡 Negative": "😡 منفی",
   "😩 Awful": "😩 خوفناک",
   "😶‍🌫️ Neutral": "😶‍🌫️ غیر جانبدار",
-  "🥳 Awesome": "🥳 بہت اچھا"
+  "🥳 Awesome": "🥳 بہت اچھا",
+  "🧑🏼 Personal": "🧑🏼 ذاتی"
 }
