--- a/lang/te.json
+++ b/lang/te.json
@@ -1176,8 +1176,8 @@
   "The provided two factor recovery code was invalid.": "అందించిన రెండు కారకాల రికవరీ కోడ్ చెల్లదు.",
   "There are no active addresses yet.": "ఇంకా క్రియాశీల చిరునామాలు లేవు.",
   "There are no calls logged yet.": "ఇంకా కాల్‌లు ఏవీ లాగిన్ కాలేదు.",
-  "There are no contact information types yet.": "సంప్రదింపు సమాచార రకాలు ఇంకా లేవు.",
   "There are no contact informations yet.": "ఇంకా సంప్రదింపు సమాచారం లేదు.",
+  "There are no contact information types yet.": "సంప్రదింపు సమాచార రకాలు ఇంకా లేవు.",
   "There are no documents yet.": "ఇంకా పత్రాలు లేవు.",
   "There are no events on that day, future or past.": "ఆ రోజు, భవిష్యత్తులో లేదా గతంలో ఎటువంటి సంఘటనలు లేవు.",
   "There are no files yet.": "ఇంకా ఫైల్‌లు లేవు.",
@@ -1233,7 +1233,7 @@
   "The type has been created": "రకం సృష్టించబడింది",
   "The type has been deleted": "రకం తొలగించబడింది",
   "The type has been updated": "రకం నవీకరించబడింది",
-  "The type of contact information. Don’t change it unless you know what you are doing.": "సంప్రదింపు సమాచారం రకం. మీరు ఏమి చేస్తున్నారో మీకు తెలియకపోతే దాన్ని మార్చవద్దు.",
+  "The type of contact information. Don’t change this unless you know what you are doing.": "సంప్రదింపు సమాచారం రకం. మీరు ఏమి చేస్తున్నారో మీకు తెలియకపోతే దీన్ని మార్చవద్దు.",
   "The user has been added": "వినియోగదారు జోడించబడ్డారు",
   "The user has been deleted": "వినియోగదారు తొలగించబడ్డారు",
   "The user has been removed": "వినియోగదారు తీసివేయబడ్డారు",
@@ -1470,6 +1470,9 @@
   "🏠 Secondary residence": "🏠 ద్వితీయ నివాసం",
   "🏡 Home": "🏡 ఇల్లు",
   "🏢 Work": "🏢 పని",
+  "📟 Pager": "📟 పేజర్",
+  "📠 Fax": "📠 ఫ్యాక్స్",
+  "📱 Mobile": "మొబైల్",
   "🔔 Reminder: :label for :contactName": "🔔 రిమైండర్: :contactName కోసం :label",
   "😀 Good": "😀 బాగుంది",
   "😁 Positive": "😁 పాజిటివ్",
@@ -1478,5 +1481,6 @@
   "😡 Negative": "😡 ప్రతికూల",
   "😩 Awful": "😩 భయంకరం",
   "😶‍🌫️ Neutral": "😶‍🌫️ తటస్థ",
-  "🥳 Awesome": "🥳 అద్భుతం"
+  "🥳 Awesome": "🥳 అద్భుతం",
+  "🧑🏼 Personal": "వ్యక్తిగత"
 }
